Update jvm config