@@ -6,11 +6,13 @@
 -XX:+UseGCOverheadLimit
 -XX:+ExplicitGCInvokesConcurrent
 -XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=/var/lib/presto/data/var/log
+-XX:HeapDumpPath=/var/log/presto-server
 -XX:+ExitOnOutOfMemoryError
 -XX:+UseGCOverheadLimit
 -XX:-UseBiasedLocking
 -XX:ReservedCodeCacheSize=256M
 -XX:+StartAttachListener
+-XX:+PrintGCDetails
+-Xlog:gc:file=/var/log/presto-server/gc-%t.log:tags,uptime,time,level:filecount=5,filesize=10M
 -Djdk.nio.maxCachedBufferSize=2000000
 -Djdk.attach.allowAttachSelf=true
